SFA01Shared/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Sale</fullName>
        </values>
        <values>
            <fullName>Dropped</fullName>
        </values>
        <values>
            <fullName>Infra Issues</fullName>
        </values>
        <values>
            <fullName>LOA</fullName>
        </values>
        <values>
            <fullName>LOI</fullName>
        </values>
        <values>
            <fullName>Order Placed</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_No__c</fullName>
        <label>Account No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Effective_Date__c</fullName>
        <description>It’s for closed sales report. Will manually key in(if opportunity status is closed then post completed date fields is mandatory)</description>
        <inlineHelpText>It’s for closed sales report. Will manually key in(if opportunity status is closed then post completed date fields is mandatory)</inlineHelpText>
        <label>Billing Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closure_Category__c</fullName>
        <label>Closure Category</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Fallout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closure_Reason__c</fullName>
        <label>Closure Reason</label>
        <picklist>
            <controllingField>Closure_Category__c</controllingField>
            <picklistValues>
                <fullName>Brands/Track Record (LOSS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brands/Track Record (WIN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political/Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price/Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Quality/Customer Satisfaction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Type__c</fullName>
        <label>Engagement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive - Customer RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive - Customer RFQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive - Customer RFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive - Customer Tender</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOB_Vertical__c</fullName>
        <description>LOB Vertical from Opportunity Creator</description>
        <formula>TEXT(Owner.LOB_Vertical__c)</formula>
        <label>LOB Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business_LOB__c</fullName>
        <description>LOB from Opportunity Creator</description>
        <formula>TEXT(Owner.Line_of_Business_LOB__c)</formula>
        <label>Line of Business (LOB)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCompetitor__c</fullName>
        <label>Other Competitor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Revenue__c</fullName>
        <formula>IF(NOT(ISPICKVAL(StageName, &quot;Closed Sale&quot;)) &amp;&amp; NOT(ISPICKVAL(StageName, &quot;Dropped&quot;)), (ExpectedRevenue / 12) * (12 - MONTH(CloseDate)), NULL)</formula>
        <label>Potential Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Offering_Category__c</fullName>
        <label>Product Offering Category</label>
        <picklist>
            <picklistValues>
                <fullName>Information and Communications Technology (ICT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process Outsourcing (BPO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connectivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Gate_Status__c</fullName>
        <label>Proposal Gate Status</label>
        <picklist>
            <picklistValues>
                <fullName>G1 - Opportunity qualification and validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2 - Opportunity development and value proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G3 - Proposal development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G4 - Proposal/tender submission &amp; solution presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G5 - Deal negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G6 - Deal closure and contract sign-off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>CASE(MONTH(If(ISBLANK(Billing_Effective_Date__c),CloseDate,Billing_Effective_Date__c)),1,&quot;Q1&quot;,2,&quot;Q1&quot;,3,&quot;Q1&quot;,4,&quot;Q2&quot;,5,&quot;Q2&quot;,6,&quot;Q2&quot;,7,&quot;Q3&quot;,8,&quot;Q3&quot;,9,&quot;Q3&quot;,10,&quot;Q4&quot;,11,&quot;Q4&quot;,&quot;Q4&quot;)</formula>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realized_Revenue__c</fullName>
        <formula>IF(ISPICKVAL(StageName, &quot;Closed Sale&quot;), (ExpectedRevenue / 12) * (12 - MONTH(Billing_Effective_Date__c)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Realized Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reminds sales representative to follow up, only one time.</description>
        <inlineHelpText>Reminds sales representative to follow up, only one time.</inlineHelpText>
        <label>Recall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_For_Lead_Routing__c</fullName>
        <label>Sales For Lead Routing</label>
        <picklist>
            <picklistValues>
                <fullName>JOHOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KELANTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MELAKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W.P. KUALA LUMPUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_No__c</fullName>
        <label>Service No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Code__c</fullName>
        <label>Tracking Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>If(ISBLANK(Billing_Effective_Date__c),TEXT(YEAR(CloseDate)),TEXT(YEAR(Billing_Effective_Date__c)))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Opportunity_Open</fullName>
        <active>true</active>
        <businessProcess>Opportunity Process</businessProcess>
        <label>Opportunity Open</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Backdated_Close_Date</fullName>
        <active>false</active>
        <errorConditionFormula>(TODAY() - CloseDate) &gt; 7</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Expected Close Date cannot be backdated by 7 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Stage_Backward</fullName>
        <active>false</active>
        <errorConditionFormula>IF((NOT(ISPICKVAL(StageName, &quot;Closed Sales&quot;)) &amp;&amp; ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Sales&quot;))||(ISPICKVAL(StageName, &quot;LOA&quot;) &amp;&amp; ISPICKVAL(PRIORVALUE(StageName),&quot;Infra Issues&quot;))||(ISPICKVAL(StageName, &quot;LOA&quot;) &amp;&amp; ISPICKVAL(PRIORVALUE(StageName),&quot;Order Placed&quot;))||(ISPICKVAL(StageName, &quot;Infra Issue&quot;) &amp;&amp; ISPICKVAL(PRIORVALUE(StageName),&quot;Order Placed&quot;)),TRUE, IF(Probability = 0, FALSE, Probability &lt; PRIORVALUE(Probability)))</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Stage cannot be set to backward value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Close</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(StageName, &quot;Closed Sale&quot;)&amp;&amp;   ISBLANK(Billing_Effective_Date__c)</errorConditionFormula>
        <errorDisplayField>Billing_Effective_Date__c</errorDisplayField>
        <errorMessage>Billing Effective Date is required when closing an opportunity.</errorMessage>
    </validationRules>
</CustomObject>